cabal-version:      2.4
name:               yesod-taxes
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             rcannon
maintainer:         reillycannon@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable yesod-taxes
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base  >=4.9.1.0 && <5
      , yesod ==1.6.*
      , text  ==1.2.4.1
      , monad-logger >= 0.3.36
      , resourcet >= 1.2.4.3
      , persistent >= 2.13.3.0
      , persistent-postgresql >= 2.13.4

  hs-source-dirs:   app
    default-language: Haskell2010
